Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/l_new_concept_exercise.dita
+++ b/l_new_concept_exercise.dita
@@ -23,15 +23,15 @@
 
 	<ol>
       
-      <li><p>Identify and interview stakeholders.</p></li>
-      <li><p>Establish implementation goals and metrics.</p></li>
-      <li><p>Define roles and responsibilities.</p></li>
-      <li><p>Establish time lines and milestones.</p></li>
-      <li><p>Build the content creation system.</p></li>
-      <li><p>Convert legacy content.</p></li>
-      <li><p>Deliver content.</p></li>
-      <li><p>Capture project knowledge.</p></li>
-      <li><p>Ensure long-term success.</p></li>
+      <li>Identify and interview stakeholders.</li>
+      <li>Establish implementation goals and metrics.</li>
+      <li>Define roles and responsibilities.</li>
+      <li>Establish time lines and milestones.</li>
+      <li>Build the content creation system.</li>
+      <li>Convert legacy content.</li>
+      <li>Deliver content.</li>
+      <li>Capture project knowledge.</li>
+      <li>Ensure long-term success.</li>
    </ol>
    
  </conbody>
