Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/l_new_concept.dita
+++ b/l_new_concept.dita
@@ -25,11 +25,11 @@
 
 		<ol>
 
-			<li><p>Northern pintail</p></li>
+			<li>Northern pintail</li>
 
-			<li><p>Mallard</p></li>
+			<li>Mallard</li>
 
-			<li><p>American black duck</p></li>
+			<li>American black duck</li>
 
 		</ol>
     
