Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/concept/lesson2/l_concept_images_tables.dita
+++ b/concept/lesson2/l_concept_images_tables.dita
@@ -3,7 +3,10 @@
 <concept id="concept_images_tables">
  <title>Duckling growth and development</title>
  <conbody>
-  
+  <fig id="fig_nkw_vmy_5sb">
+   <title>Ducklings running</title>
+  <image href="images/ducklings_swimming.jpg" id="image_lss_kmy_5sb"/>
+    </fig>
  </conbody>
 </concept>
 
