--- a/concept/lesson2/l_concept_images_tables.dita
+++ b/concept/lesson2/l_concept_images_tables.dita
@@ -1,13 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="concept_images_tables">
+  
  <title>Duckling growth and development</title>
+  
  <conbody>
+   
   <fig id="fig_nkw_vmy_5sb">
+    
    <title>Ducklings running</title>
-  <image href="images/ducklings_swimming.jpg" id="image_lss_kmy_5sb"/>
-    </fig>
+    
+  	<image href="images/ducklings_swimming.jpg" id="image_lss_kmy_5sb"/>
+    
+  </fig>
+   
+   	<simpletable>
+      
+      <sthead>
+        <stentry><p>Age</p></stentry>
+        <stentry><p>Milestone</p></stentry>
+      </sthead>
+      
+      <strow>
+        <stentry><p>7 weeks</p></stentry>
+        <stentry><p>Attempt flight for the first time</p></stentry>
+      </strow>
+      
+      <strow>
+		<stentry><p>12-14 weeks</p></stentry>
+		<stentry><p>Reach adult body weight</p></stentry>
+	  </strow>
+
+	  <strow>
+		<stentry><p>1 year</p></stentry>
+		<stentry><p>Capable of reproduction</p></stentry>
+	 </strow>
+      
+   </simpletable>
+  <table id="table_obq_q4y_5sb">
+   <title>Typical development of mallard ducks</title>
+   <tgroup cols="2">
+    <colspec colname="c1" colnum="1" colwidth="1.0*"/>
+    <colspec colname="c2" colnum="2" colwidth="1.0*"/>
+    <thead>
+     <row>
+      <entry><p>Age</p></entry>
+      <entry><p>Milestone</p></entry>
+     </row>
+    </thead>
+    <tbody>
+     <row>
+      <entry><p>7 weeks</p></entry>
+      <entry><p>Attempt flight for the first time</p></entry>
+     </row>
+     <row>
+      <entry><p>12-14 weeks</p></entry>
+      <entry><p>Reach adult body weight</p></entry>
+     </row>
+     <row>
+      <entry><p>1 year</p></entry>
+      <entry><p>Capable of reproduction</p></entry>
+     </row>
+    </tbody>
+   </tgroup>
+  </table>
+   
  </conbody>
+  
 </concept>
 
 
