--- a/concept/lesson2/Concept.dita
+++ b/concept/lesson2/Concept.dita
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="concept_aqg_xqy_5sb">
-    <title></title>
-    <shortdesc></shortdesc>
-    <conbody>
-        <p></p>
-    </conbody>
+<concept id="concept_images_tables_exercise">
+ <title>Supporting marketing with technical content</title>
+ <conbody>
+
+ </conbody>
 </concept>
