--- a/concept/lesson2/l_concept_images_tables.dita
+++ b/concept/lesson2/l_concept_images_tables.dita
@@ -7,11 +7,8 @@
  <conbody>
    
   <fig id="fig_nkw_vmy_5sb">
-    
    <title>Ducklings running</title>
-    
-  	<image href="images/ducklings_swimming.jpg" id="image_lss_kmy_5sb"/>
-    
+   <image href="images/ducklings_running.jpg" id="image_jvl_ssy_5sb"/>
   </fig>
    
    	<simpletable>
