--- a/task/l_task.dita
+++ b/task/l_task.dita
@@ -8,6 +8,61 @@
       	<p>Watching wild ducks can be calming and recreational.</p>
 		<p>Read this to learn more about what you need to have a satisfying duck-watching experience.</p>
       </context>
+    <steps>
+      <step>
+        <cmd>Choose a location to watch ducks</cmd>
+        <info><p>Generally, ducks are found in wild locations, near water</p></info>
+        </step>
+      <step>
+        <cmd>Pick a field guide to identify the ducks.</cmd>
+        <choices>
+          <choice>Many modern duck watchers rely on the Sibley guide</choice>
+          <choice>A traditional favorite is the Peterson guide.</choice>           
+          </choices>
+        </step>
+        <step>
+          <cmd>Find some good optic</cmd>
+          <choicetable>
+            <chhead>
+              <choptionhd><p>Type</p></choptionhd>
+              <chdeschd><p>Advantages</p></chdeschd>
+              </chhead>
+            <chrow>
+              <choption>Binoculars</choption>
+                <chdesc>Wide field of view, allows quick observations</chdesc>
+              </chrow>
+            <chrow>
+              <choption><p>Spotting scope</p></choption>
+                <chdesc><p>Higher magnification, better light-gathering.</p></chdesc>
+              </chrow>
+            </choicetable>
+          </step>
+      <step>
+        <cmd>Go watch some birds.</cmd>
+        <substeps>
+          <substep>
+            <cmd>Walk around.</cmd>
+            </substep>
+          <substep>
+            <cmd>When you see one, stop.</cmd>
+        </substep>
+        <substep>
+            <cmd>Identify it.</cmd>
+        </substep>
+          </substeps>
+        </step>
+      <step>
+        <cmd>When you have definitively identified a duck, make a note in your guide.</cmd>
+        <stepxmp>
+          <p><image href="checklist.png" id="image_j5k_flm_vsb"/></p>
+          </stepxmp>
+        <stepresult>
+          <p>You'll now have a record you can keep for the rest of your life.</p>
+          </stepresult>
+        </step>
+          
+                  
+      </steps>
     </taskbody>
 
 </task>
