--- a/task/l_task.dita
+++ b/task/l_task.dita
@@ -21,22 +21,30 @@
           </choices>
         </step>
         <step>
-          <cmd>Find some good optic</cmd>
-          <choicetable>
-            <chhead>
-              <choptionhd><p>Type</p></choptionhd>
-              <chdeschd><p>Advantages</p></chdeschd>
-              </chhead>
-            <chrow>
-              <choption>Binoculars</choption>
-                <chdesc>Wide field of view, allows quick observations</chdesc>
-              </chrow>
-            <chrow>
-              <choption><p>Spotting scope</p></choption>
-                <chdesc><p>Higher magnification, better light-gathering.</p></chdesc>
-              </chrow>
-            </choicetable>
-          </step>
+        <cmd>Find some good optic.</cmd>
+        <choicetable>
+          <chhead>
+            <choptionhd>
+              <p>Type</p>
+            </choptionhd>
+            <chdeschd>
+              <p>Advantages</p>
+            </chdeschd>
+          </chhead>
+          <chrow>
+            <choption>Binoculars</choption>
+            <chdesc>Wide field of view, allows quick observations</chdesc>
+          </chrow>
+          <chrow>
+            <choption>
+              <p>Spotting scope</p>
+            </choption>
+            <chdesc>
+              <p>Higher magnification, better light-gathering.</p>
+            </chdesc>
+          </chrow>
+        </choicetable>
+      </step>
       <step>
         <cmd>Go watch some birds.</cmd>
         <substeps>
@@ -60,8 +68,12 @@
           <p>You'll now have a record you can keep for the rest of your life.</p>
           </stepresult>
         </step>
-          
-                  
+      <stepsection>Once you’ve identified the duck, you can spend some time noting its behavior.
+        </stepsection>
+      <step>
+      <note>Don't disturb the ducks while observing their behavior; they behave differently when humans are present.</note>
+        <cmd>Watch how the ducks interact with one another, what they’re eating, or how and when they preen.</cmd>
+        </step>                 
       </steps>
     </taskbody>
 
