--- a/reference/l_glossentry_start.dita
+++ b/reference/l_glossentry_start.dita
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE glossentry PUBLIC "-//OASIS//DTD DITA Glossary//EN" "glossary.dtd">
 <glossentry id="duck">
-    <glossterm></glossterm>
+    <glossterm>Duck</glossterm>
+  <glossdef><p>A type of swimming bird characterized by webbed feet, a broad, flat bill, and quacking</p></glossdef>
+  
 </glossentry>
