Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/maps_bookmaps/c_wild_duck_species.dita
+++ b/maps_bookmaps/c_wild_duck_species.dita
@@ -5,9 +5,9 @@
  <conbody>
   <p>The longest species of dabbling ducks in North America are:</p>
   <ol>
-   <li><p>Northern pintail</p></li>
-   <li><p>Mallard</p></li>
-   <li><p>American black duck</p></li>
+   <li>Northern pintail</li>
+   <li>Mallard</li>
+   <li>American black duck</li>
   </ol>
   <note>Although the northern pintail is the longest dabbling duck, the mallard is generally
    considered the largest because of its heavier body weight.</note>
