Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/maps_bookmaps/c_duckdb.dita
+++ b/maps_bookmaps/c_duckdb.dita
@@ -4,7 +4,7 @@
  <title>Using the Duck Database</title>
  <conbody>
   <p>
-   <draft-comment author="simonbate">This is a shell topic.</draft-comment>
+   <draft-comment author="Abrar">This is a shell topic.</draft-comment>
   </p>
  </conbody>
 </concept>
