--- a/maps_bookmaps/_m_ducks_start.ditamap
+++ b/maps_bookmaps/_m_ducks_start.ditamap
@@ -1,5 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map id="ducks">
- <title>xyz</title>
-</map>
+ <title>Ducks</title>
+  
+  <topicref href="c_wild_ducks.dita">
+     	<topicref href="c_wild_duck_types.dita"/>
+    	<topicref href="c_wild_duck_species.dita"/>
+       	<topicref href="t_watching_wild_ducks.dita"/>
+  </topicref>
+  
+  <topicref href="c_domestic_ducks.dita">
+       <topicref href="c_duckling_growth.dita"/>
+       <topicref href="c_feeding_ducklings.dita">
+       <topicref href="c_duck_weight.dita"/>
+  </topicref>
+	</topicref>
+
+	<topicref href="c_duckdb.dita">
+       <topicref href="c_writing_about_ducks.dita" locktitle="yes"/>
+       <topicref href="r_tnav.dita"/>
+	</topicref>
+  
+  <mapref href="g_duck_glossorg.ditamap" format="ditamap"/>
+ 
+  
+	</map>
