--- a/maps_bookmaps/_m_ducks_advanced_start.ditamap
+++ b/maps_bookmaps/_m_ducks_advanced_start.ditamap
@@ -2,6 +2,15 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map id="ducks">
  <title>Ducks</title>
+  
+  <topicmeta>
+    <critdates>
+      <created date="2022-03-17"/>
+      </critdates>
+      <category>Sample</category>
+    </topicmeta>
+        
+  
  <topicref href="c_wild_ducks.dita">
   <topicref href="c_wild_duck_types.dita"/>
   <topicref href="c_wild_duck_species.dita"/>
@@ -16,6 +25,9 @@
   </topicref>
  </topicref>
  <topicref href="c_duckdb.dita">
+   <topicmeta>
+     <audience type="user" experiencelevel="expert"/>
+     </topicmeta>
   <topicref href="c_writing_about_ducks.dita"/>
   <topicref href="t_create_table.dita"/>
   <topicref href="t_adding_entry.dita"/>
@@ -30,5 +42,9 @@
   <topicref href="r_modify_table.dita"/>
   <topicref href="r_newtable.dita"/>
  </topicref>
- <mapref href="g_duck_glossorg.ditamap" format="ditamap"/>
+ <mapref href="g_duck_glossorg.ditamap" format="ditamap">
+   <topicmeta>
+     <searchtitle>Duck Glossary</searchtitle>
+     </topicmeta>
+   </mapref>
 </map>
