--- a/maps_bookmaps/_b_ducks_advanced_start.ditamap
+++ b/maps_bookmaps/_b_ducks_advanced_start.ditamap
@@ -8,20 +8,25 @@
   <bookmeta>
     <author>Abrar Syed</author>
     <bookrights>
-      <copyfirst>
+      <copyrfirst>
         <year>2021</year>
-        </copyfirst>
-      <copylast>
+        </copyrfirst>
+      <copyrlast>
         <year>2022</year>
-        </copylast>
+        </copyrlast>
       <bookowner>
         <organization>ABWriting</organization>
         </bookowner>
       </bookrights>
     </bookmeta>
   
+  <frontmatter><booklists><toc/></booklists></frontmatter>
+    
+  
     <chapter href="c_wild_ducks.dita">
+      <topicmeta>
       <category>Wild ducks</category>
+        </topicmeta>
         <topicref href="c_wild_duck_types.dita"/>
         <topicref href="c_wild_duck_species.dita"/>
         <topicref href="t_watching_wild_ducks.dita"/>
@@ -46,4 +51,13 @@
             <topicref href="r_newtable.dita"/>
             <topicref href="r_modify_table.dita"/>
     </chapter>
+  
+  <backmatter>
+    <booklists>
+      <glossarylist>
+        <topicref href="g_duck_glossgroup.dita"/>
+      </glossarylist>
+      <indexlist/>
+    </booklists>
+  </backmatter>
 </bookmap>
