Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/maps_bookmaps/exercises/_b_cs101_start.ditamap
+++ b/maps_bookmaps/exercises/_b_cs101_start.ditamap
@@ -12,7 +12,7 @@
     </publisherinformation>
     <critdates>
       <created date="2021"/>
-      <revised date="2022"/>
+      <revised modified="2022"/>
     </critdates>
   </bookmeta>
   
