--- a/maps_bookmaps/_reltable_start.ditamap
+++ b/maps_bookmaps/_reltable_start.ditamap
@@ -41,6 +41,27 @@
  </topicref>
  
  <mapref href="g_duck_glossorg.ditamap" format="ditamap"/>
+  
+  <reltable title="Ducks relatable">
+    <relheader>
+      <relcolspec type="concept"/>
+      <relcolspec type="tasks"/>
+      <relcolspec type="reference"/>
+      </relheader>
+      <relrow>
+        <relcell>
+          <topicref href="c_writing_about_ducks.dita"/>
+          </relcell>
+        <relcell>
+          <topicref href="t_adding_entry.dita"/>
+          </relcell>
+        <relcell>
+          <topicref href="r_add.dita"/>
+          </relcell>
+        </relrow>
+      
+    </reltable>
+  
 
  
 </map>
