Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/reuse_basic_samples/reusing_topics_and_maps/_m_keeping_ducks_start.ditamap
+++ b/reuse_basic_samples/reusing_topics_and_maps/_m_keeping_ducks_start.ditamap
@@ -4,4 +4,5 @@
  <title>Keeping ducks</title>
  <topicref href="_m_domestic_ducks.ditamap" format="ditamap"/>
  <topicref href="_m_duck_database.ditamap" format="ditamap"/>
+ <topicref href="_m_breeds.ditamap" format="ditamap"/>
 </map>
