Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/reuse_basic_samples/reusing_topics_and_maps/_m_wild_ducks_start.ditamap
+++ b/reuse_basic_samples/reusing_topics_and_maps/_m_wild_ducks_start.ditamap
@@ -7,5 +7,6 @@
   <topicref href="c_wild_duck_species.dita"/>
   <topicref href="c_habitats.dita"/>
   <topicref href="t_watching_wild_ducks.dita"/>
+  <topicref href="c_duck_safety.dita"/>
  </topicref>
  </map>
