Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/reuse_basic_samples/reusing_topics_and_maps/_m_domestic_ducks_start.ditamap
+++ b/reuse_basic_samples/reusing_topics_and_maps/_m_domestic_ducks_start.ditamap
@@ -8,6 +8,7 @@
   <topicref href="c_feeding_ducklings.dita">
    <topicref href="c_duck_weight.dita"/>
   </topicref>
+   <topicref href="c_duck_safety.dita"/>
  </topicref>
  
  
