Committing with Oxygen XML Web Author
Signed-off-by: Abrar

--- a/reuse_basic_samples/conrefs/t_watching_wild_ducks_start.dita
+++ b/reuse_basic_samples/conrefs/t_watching_wild_ducks_start.dita
@@ -6,7 +6,12 @@
         <prereq>
             <p>Before you go watching wild ducks, make sure you know what a wild duck looks
                 like.</p>
+          
+          <p conref="c_duck_safety.dita#duck_safety/safety"/>
         </prereq>
+      
+  
+      
         <context>
             <p>Watching wild ducks can be calming and recreational. </p>
             <p>Read this to learn more about what you need to have a satisfying duck-watching
